# backend_avito

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  load_test.js  pyproject.toml
app/: errors.py  main.py  pydantic_models.py
app/clients/: kafka.py  postgres.py  redis.py
app/dependencies/: auth.py
app/models/: account.py  advertisement.py  moderation.py  response_predict.py  seller.py
app/observability/: metrics.py  middleware.py
app/repositories/: accounts.py  advertisements.py  cache.py  model.py  moderation.py  sellers.py
app/routes/: auth.py  close.py  moderation_result.py  predict.py
app/services/: auth_service.py  close_service.py  ml_service.py  moderation_service.py
app/workers/: moderation_worker.py
artifacts/: grafana_demo.mov  kafka_demo.mov
migrations/: 20260201183043_create_sellers.sql  20260201183105_create_advertisements.sql  20260201191842_insert_sellers.sql  20260201192038_insert_advertisements.sql  20260213182643_create_moderation_results.sql  20260301122846_add_is_closed.sql  20260308130829_create_accounts.sql  README.md
scripts/: migrate.sh
tests/: conftest.py  test_auth.py  test_cache.py  test_close.py  test_close_api.py  test_predict.py  test_repositories.py  test_service.py  test_worker.py
